--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,9 +1,9 @@
 #index:
 #    path: /
 #    controller: App\Controller\DefaultController::index
-toto:
-  path: /client/prenom/{firstname}
-  controller: App\Controller\ClientController::info
-  methods: GET
-  requirements:
-    firstname: '^[a-z]{1}[a-z -]*[a-z]{1}$'
+#toto:
+#  path: /client/prenom/{firstname}
+#  controller: App\Controller\ClientController::info
+#  methods: GET
+#  requirements:
+#    firstname: '^[a-z]{1}[a-z -]*[a-z]{1}$'
