--- a/.env
+++ b/.env
@@ -29,5 +29,5 @@ APP_SECRET=e269b5f9015d5b17923f68b3d6233ea0
 # 
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/images.db"
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
-DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
+DATABASE_URL="mysql://root:root@127.0.0.1:3306/ue_framework?serverVersion=5.7"
 ###< doctrine/doctrine-bundle ###
