--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "symfony/monolog-bundle": "^3.1",
         "symfony/notifier": "5.0.*",
         "symfony/process": "5.0.*",
+        "symfony/proxy-manager-bridge": "5.0.*",
         "symfony/security-bundle": "5.0.*",
         "symfony/serializer-pack": "*",
         "symfony/string": "5.0.*",
@@ -34,7 +35,7 @@
     },
     "require-dev": {
         "symfony/debug-pack": "*",
-        "symfony/maker-bundle": "^1.0",
+        "symfony/maker-bundle": "^1.27",
         "symfony/profiler-pack": "*",
         "symfony/test-pack": "*"
     },
