--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -1,6 +1,13 @@
 doctrine:
     dbal:
-        url: '%env(resolve:DATABASE_URL)%'
+            dbname: micke.niepceron
+            host: 10.5.10.1
+            port: 3306
+            user: micke.niepceron
+            password: EKGdbeMx
+            driver: pdo_mysql
+            # if the url option is specified, it will override the above config
+            url: mysql://micke.niepceron:EKGdbeMx@10.5.10.1:3306/micke.niepceron
 
         # IMPORTANT: You MUST configure your server version,
         # either here or in the DATABASE_URL env var (see .env file)
